--- a/webMVC/appsettings.json
+++ b/webMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ApiSettings": {
+    "BaseUrl": "https://localhost:7260/api/"
+  }
+
 }
